--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-to-koa",
   "version": "1.0.0",
-  "description": "express-to-koa",
+  "description": "Use express middlewares in Koa2, the one that really works.",
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
@@ -13,7 +13,12 @@
     "url": "git://github.com/kaelzhang/express-to-koa.git"
   },
   "keywords": [
-    "express-to-koa"
+    "express-to-koa",
+    "express",
+    "koa",
+    "koa2",
+    "middleware",
+    "converter"
   ],
   "engines": {
     "node": ">=4"
@@ -38,6 +43,7 @@
     "babel-plugin-transform-exponentiation-operator": "^6.8.0",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0"
+    "babel-preset-es2015": "^6.16.0",
+    "koa": "next"
   }
 }
