--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-to-koa",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Use express middlewares in Koa2, the one that really works.",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
+    "axios": "^0.15.3",
     "babel-cli": "^6.16.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.16.0",
@@ -44,6 +45,7 @@
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
-    "koa": "next"
+    "koa": "next",
+    "koa-router": "next"
   }
 }
