--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "express-to-koa",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Use express middlewares in Koa2, the one that really works.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
     "test": "npm run build && node --harmony ./node_modules/.bin/ava --verbose --timeout=10s",
@@ -18,7 +18,8 @@
     "koa",
     "koa2",
     "middleware",
-    "converter"
+    "converter",
+    "connect"
   ],
   "engines": {
     "node": ">=4"
