--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "test": "npm run build && node --harmony ./node_modules/.bin/ava --verbose --timeout=10s",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -36,17 +36,11 @@
     }
   },
   "devDependencies": {
-    "ava": "^0.16.0",
-    "axios": "^0.15.3",
-    "babel-cli": "^6.16.0",
-    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.16.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
-    "babel-plugin-transform-exponentiation-operator": "^6.8.0",
-    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "koa": "next",
-    "koa-router": "next"
+    "@babel/cli": "^7.2.3",
+    "@babel/preset-env": "^7.3.4",
+    "ava": "^1.3.1",
+    "axios": "^0.18.0",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0"
   }
 }
