--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "express-to-koa",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Use express middlewares in Koa2, the one that really works.",
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
-    "test": "npm run build && node --harmony ./node_modules/.bin/ava --verbose --timeout=10s",
+    "test": "npm run build && node ./node_modules/.bin/ava --verbose --timeout=10s",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -30,14 +30,14 @@
     "url": "https://github.com/kaelzhang/express-to-koa/issues"
   },
   "ava": {
-    "require": "babel-register",
-    "babel": {
-      "babelrc": true
-    }
+    "require": [
+      "@babel/register"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/preset-env": "^7.3.4",
+    "@babel/register": "^7.0.0",
     "ava": "^1.3.1",
     "axios": "^0.18.0",
     "koa": "^2.7.0",
